--- a/Data/Model.ipynb
+++ b/Data/Model.ipynb
@@ -6,7 +6,15 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using Theano backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from sklearn.cross_validation import train_test_split\n",
@@ -17,15 +25,75 @@
     "from sklearn.ensemble import AdaBoostClassifier\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "import xgboost as xgb\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer,HashingVectorizer\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.pipeline import Pipeline\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from keras.models import Sequential"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Word to Vec\n",
+    "from gensim.models import Word2Vec\n",
+    "data = pd.read_csv('train.csv')\n",
+    "data['comments'] = data['comments'].fillna('')\n",
+    "comment = [x.lower() for x in data['comments']]\n",
+    "for i in range(len(comment)):\n",
+    "    comment[i] = comment[i].split()\n",
+    "# word_model = Word2Vec(comment, size=100, min_count=1, workers=3)\n",
+    "# print word_model['readable']\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# get the model of prediction \n",
+    "kaggle_test = pd.read_csv('test.csv')\n",
+    "kaggle_test['comments'] = kaggle_test['comments'].fillna('')\n",
+    "kaggle_comment = [x.lower() for x in kaggle_test['comments']]\n",
+    "for i in range(len(kaggle_comment)):\n",
+    "    kaggle_comment[i] = kaggle_comment[i].split()\n",
+    "print len(comment),len(kaggle_comment)\n",
+    "kaggle_comment = np.concatenate((comment, kaggle_comment), axis=0)\n",
+    "print len(kaggle_comment)\n",
+    "word_model = Word2Vec(kaggle_comment, size=100, min_count=1, workers=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "Word_data = [[] for x in range(len(comment))]\n",
+    "for i in range(len(comment)):\n",
+    "    Word_data[i] = [0 for x in range(100)]\n",
+    "    for j in range(len(comment[i])):\n",
+    "        for k in range(100):\n",
+    "            Word_data[i][k] += word_model[comment[i][j]][k]\n",
+    "    if (len(comment[i]) > 0):\n",
+    "        Word_data[i] = [x / len(comment[i]) for x in Word_data[i]]    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -42,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -51,7 +119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE : 5.93247827401\n"
+      "MSE : 5.87853898107\n"
      ]
     }
    ],
@@ -65,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -75,53 +143,56 @@
     "data = np.loadtxt('test.in')\n",
     "# helpfulness | 7| 8| 9| 10| 11| 12-31| 32| 33| 34\n",
     "test = data[:, 3:33]\n",
-    "y_predict = first_model.predict(test)\n",
-    "\n",
-    "# clarity | 3| 4| 5| 6| 9| 10| 11| 12-31|32 |33| 35\n",
-    "clar_test1 = data[:, 3:7]\n",
-    "clar_test2 = data[:, 9:33]\n",
-    "clar_test = np.concatenate((clar_test1, clar_test2), axis=1)"
+    "y_predict = first_model.predict(test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MSE: 3.76857770578\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Read in the data with pandas http://pandas.pydata.org\n",
-    "data = pd.read_csv('train.csv')\n",
-    "data['comments'] = data['comments'].fillna('')\n",
-    "train, test = train_test_split(data)\n",
+    "print len(Word_data), len(Data_Y)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(Word_data, Data_Y)\n",
+    "\n",
     "# Make a pipeline to do unigrams then run linear regression\n",
     "# http://scikit-learn.org/stable/modules/generated/sklearn.pipeline.Pipeline.html\n",
     "pipeline = Pipeline([\n",
-    "        ('cv', CountVectorizer(ngram_range=(1,1))),\n",
-    "        ('regression', RandomForestRegressor(max_depth=75,n_jobs=-1))\n",
+    "        ('regression', RandomForestRegressor(max_depth=50,n_jobs=-1))\n",
     "])\n",
     "cv = GridSearchCV(\n",
     "    pipeline, {}\n",
-    ").fit(train['comments'], train['quality'])\n",
-    "mse = mean_squared_error(test['quality'], cv.predict(test['comments']))\n",
-    "print(\"MSE: {}\".format(mse))\n",
-    "kaggle_test = pd.read_csv('test.csv')\n",
-    "kaggle_test['comments'] = kaggle_test['comments'].fillna('')\n",
-    "predictions = cv.predict(kaggle_test['comments'])"
+    ").fit(X_train, y_train)\n",
+    "mse = mean_squared_error(y_test, cv.predict(X_test))\n",
+    "print(\"MSE: {}\".format(mse))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# generate test data\n",
+    "Word_data = [[] for x in range(len(kaggle_comment))]\n",
+    "for i in range(len(kaggle_comment)):\n",
+    "    Word_data[i] = [0 for x in range(100)]\n",
+    "    for j in range(len(kaggle_comment[i])):\n",
+    "        for k in range(100):\n",
+    "            Word_data[i][k] += word_model[kaggle_comment[i][j]][k]\n",
+    "    if (len(kaggle_comment[i]) > 0):\n",
+    "        Word_data[i] = [x / len(kaggle_comment[i]) for x in Word_data[i]]  \n",
+    "\n",
+    "predictions = cv.predict(Word_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -130,14 +201,14 @@
     "y_quality = [0 for i in range(len(predictions))]\n",
     "outfile = open('predict.out','wb')\n",
     "for i in range(len(predictions)):\n",
-    "    y_quality[i] = y_predict[i] * 0.1 + 0.9 * predictions[i]\n",
+    "    y_quality[i] = y_predict[i] * 0.2 + 0.8 * predictions[i]\n",
     "    outfile.write(str(y_quality[i]) + '\\n')\n",
     "outfile.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
