--- a/Model.ipynb
+++ b/Model.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using Theano backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from sklearn.cross_validation import train_test_split\n",
@@ -15,12 +23,77 @@
     "from sklearn.grid_search import GridSearchCV\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import AdaBoostClassifier\n",
-    "import xgboost as xgb"
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "import xgboost as xgb\n",
+    "from sklearn.feature_extraction.text import CountVectorizer,HashingVectorizer\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "import pandas as pd\n",
+    "from keras.models import Sequential"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Word to Vec\n",
+    "from gensim.models import Word2Vec\n",
+    "data = pd.read_csv('train.csv')\n",
+    "data['comments'] = data['comments'].fillna('')\n",
+    "comment = [x.lower() for x in data['comments']]\n",
+    "for i in range(len(comment)):\n",
+    "    comment[i] = comment[i].split()\n",
+    "# word_model = Word2Vec(comment, size=100, min_count=1, workers=3)\n",
+    "# print word_model['readable']\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# get the model of prediction \n",
+    "kaggle_test = pd.read_csv('test.csv')\n",
+    "kaggle_test['comments'] = kaggle_test['comments'].fillna('')\n",
+    "kaggle_comment = [x.lower() for x in kaggle_test['comments']]\n",
+    "for i in range(len(kaggle_comment)):\n",
+    "    kaggle_comment[i] = kaggle_comment[i].split()\n",
+    "print len(comment),len(kaggle_comment)\n",
+    "kaggle_comment = np.concatenate((comment, kaggle_comment), axis=0)\n",
+    "print len(kaggle_comment)\n",
+    "word_model = Word2Vec(kaggle_comment, size=100, min_count=1, workers=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "Word_data = [[] for x in range(len(comment))]\n",
+    "for i in range(len(comment)):\n",
+    "    Word_data[i] = [0 for x in range(100)]\n",
+    "    for j in range(len(comment[i])):\n",
+    "        for k in range(100):\n",
+    "            Word_data[i][k] += word_model[comment[i][j]][k]\n",
+    "    if (len(comment[i]) > 0):\n",
+    "        Word_data[i] = [x / len(comment[i]) for x in Word_data[i]]    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -28,44 +101,16 @@
    "source": [
     "# Load Train dataset\n",
     "data = np.loadtxt('train.in')\n",
-    "# helpfulness | 7| 8| 9| 10| 11| 12-31| 32| 33| 34\n",
-    "help_data_X = data[:, 7:34]\n",
-    "help_data_y = data[:, 34]\n",
+    "# helpfulness |3| 4| 5| 6| 7| 8| 9| 10| 11| 12-31| 32| 33| 34\n",
+    "Data_X = data[:, 3:33]\n",
+    "Data_Y = data[:, 36]\n",
     "\n",
-    "# clarity | 3| 4| 5| 6| 9| 10| 11| 12-31|32 |33| 35\n",
-    "clar_data_X1 = data[:, 3:7]\n",
-    "clar_data_X2 = data[:, 9:34]\n",
-    "clar_data_X = np.concatenate((clar_data_X1, clar_data_X2), axis=1)\n",
-    "clar_data_y = data[:, 35]\n",
-    "\n",
-    "quality = data[:, 36]"
+    "train_X, test_X, train_y, test_y = train_test_split(Data_X, Data_Y, test_size=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "hX_train, hX_test, hy_train, hy_test = train_test_split(help_data_X, help_data_y, test_size=0.3, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "cX_train, cX_test, cy_train, cy_test = train_test_split(clar_data_X, clar_data_y, test_size=0.3, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -74,129 +119,118 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE HELP: 2.36566319602\n"
+      "MSE : 5.87853898107\n"
      ]
     }
    ],
    "source": [
-    "# svr = GridSearchCV(SVR(kernel='rbf', gamma=0.1), cv=5,\n",
-    "#                    param_grid={\"C\": [1e0, 1e1, 1e2, 1e3],\n",
-    "#                                \"gamma\": np.logspace(-2, 2, 5)})\n",
-    "\n",
-    "# svr = GridSearchCV(SVR(kernel='rbf', gamma=0.1), cv=5,\n",
-    "#                    param_grid={\"C\": [1e0],\n",
-    "#                                \"gamma\": np.logspace(-2,5)})\n",
-    "# svr.fit(hX_train, hy_train)\n",
-    "# y_svr = svr.predict(hX_test)\n",
-    "# lr = LogisticRegression()\n",
-    "# lr = AdaBoostClassifier(n_estimators=400,learning_rate=0.5)\n",
-    "lr = xgb.XGBClassifier(n_estimators=400,max_depth=5)\n",
-    "lr.fit(hX_train, hy_train)\n",
-    "y_lr = lr.predict(hX_test)\n",
-    "mse = mean_squared_error(hy_test, y_lr)\n",
-    "print(\"MSE HELP: {}\".format(mse))"
+    "first_model = RandomForestRegressor(n_estimators = 300)\n",
+    "first_model.fit(train_X, train_y)\n",
+    "y_first_model = first_model.predict(test_X)\n",
+    "mse = mean_squared_error(test_y, y_first_model)\n",
+    "print(\"MSE : {}\".format(mse))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MSE CLAR: 2.0418741512\n"
-     ]
-    }
-   ],
-   "source": [
-    "# svr_c = GridSearchCV(SVR(kernel='rbf', gamma=0.1), cv=5,\n",
-    "#                    param_grid={\"C\": [1e0, 1e1, 1e2, 1e3],\n",
-    "#                                \"gamma\": np.logspace(-2, 2, 5)})\n",
-    "# svr_c.fit(cX_train, cy_train)\n",
-    "# y_svr_c = svr_c.predict(cX_test)\n",
-    "# mse = mean_squared_error(cy_test, y_svr_c)\n",
-    "# print(\"MSE: {}\".format(mse))\n",
-    "# clr = LogisticRegression()\n",
-    "clr = AdaBoostClassifier(n_estimators=500,learning_rate=0.3)\n",
-    "# clr = xgb.XGBClassifier(n_estimators=500,max_depth=5)\n",
-    "clr.fit(cX_train, cy_train)\n",
-    "y_clr = clr.predict(cX_test)\n",
-    "mse = mean_squared_error(cy_test, y_clr)\n",
-    "print(\"MSE CLAR: {}\".format(mse))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# y_quality = [0 for i in range(len(y_clr))]\n",
-    "# for i in range(len(y_clr)):\n",
-    "#     y_quality[i] = y_clr[i] + y_lr[i]\n",
-    "# mse = mean_squared_error(quality, y_quality)\n",
-    "# print(\"MSE ALL: {}\".format(mse))\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Load Test dataset\n",
     "data = np.loadtxt('test.in')\n",
     "# helpfulness | 7| 8| 9| 10| 11| 12-31| 32| 33| 34\n",
-    "help_test = data[:, 7:34]\n",
+    "test = data[:, 3:33]\n",
+    "y_predict = first_model.predict(test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print len(Word_data), len(Data_Y)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(Word_data, Data_Y)\n",
     "\n",
-    "# clarity | 3| 4| 5| 6| 9| 10| 11| 12-31|32 |33| 35\n",
-    "clar_test1 = data[:, 3:7]\n",
-    "clar_test2 = data[:, 9:34]\n",
-    "clar_test = np.concatenate((clar_test1, clar_test2), axis=1)\n"
+    "# Make a pipeline to do unigrams then run linear regression\n",
+    "# http://scikit-learn.org/stable/modules/generated/sklearn.pipeline.Pipeline.html\n",
+    "pipeline = Pipeline([\n",
+    "        ('regression', RandomForestRegressor(max_depth=50,n_jobs=-1))\n",
+    "])\n",
+    "cv = GridSearchCV(\n",
+    "    pipeline, {}\n",
+    ").fit(X_train, y_train)\n",
+    "mse = mean_squared_error(y_test, cv.predict(X_test))\n",
+    "print(\"MSE: {}\".format(mse))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# lr = LogisticRegression()\n",
-    "# lr = AdaBoostClassifier(n_estimators=400,learning_rate=0.5)\n",
-    "lr = xgb.XGBClassifier(n_estimators=400,max_depth=5)\n",
-    "lr.fit(help_data_X, help_data_y)\n",
-    "y_lr = lr.predict(help_test)\n",
-    "# clr = LogisticRegression()\n",
-    "clr = AdaBoostClassifier(n_estimators=500,learning_rate=0.3)\n",
-    "clr.fit(clar_data_X, clar_data_y)\n",
-    "y_clr = clr.predict(clar_test)\n",
-    "y_quality = [0 for i in range(len(y_clr))]\n",
-    "outfile = open('predit.out','wb')\n",
-    "for i in range(len(y_clr)):\n",
-    "    y_quality[i] = y_clr[i] + y_lr[i]\n",
-    "    outfile.write(str(y_quality[i]) + '\\n')"
+    "# generate test data\n",
+    "Word_data = [[] for x in range(len(kaggle_comment))]\n",
+    "for i in range(len(kaggle_comment)):\n",
+    "    Word_data[i] = [0 for x in range(100)]\n",
+    "    for j in range(len(kaggle_comment[i])):\n",
+    "        for k in range(100):\n",
+    "            Word_data[i][k] += word_model[kaggle_comment[i][j]][k]\n",
+    "    if (len(kaggle_comment[i]) > 0):\n",
+    "        Word_data[i] = [x / len(kaggle_comment[i]) for x in Word_data[i]]  \n",
+    "\n",
+    "predictions = cv.predict(Word_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "y_quality = [0 for i in range(len(predictions))]\n",
+    "outfile = open('predict.out','wb')\n",
+    "for i in range(len(predictions)):\n",
+    "    y_quality[i] = y_predict[i] * 0.2 + 0.8 * predictions[i]\n",
+    "    outfile.write(str(y_quality[i]) + '\\n')\n",
     "outfile.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "submit = pd.read_csv('submission1.csv')\n",
+    "submit['quality'] = y_quality\n",
+    "submit.to_csv('submission.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Save the model for later\n",
+    "import pickle\n",
+    "with open('modelCV.pkl', 'wb') as f:\n",
+    "    pickle.dump(cv, f)"
    ]
   },
   {
