--- a/lstm/lstm-Rate.ipynb
+++ b/lstm/lstm-Rate.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +79,7 @@
     "GLOVE_DIR = BASE_DIR + '/glove.6B/'\n",
     "TEXT_DATA_DIR = BASE_DIR + '/20_newsgroup/'\n",
     "MAX_SEQUENCE_LENGTH = 200\n",
-    "MAX_NB_WORDS = 20000\n",
+    "MAX_NB_WORDS = 187200\n",
     "EMBEDDING_DIM = 100\n",
     "VALIDATION_SPLIT = 0.2\n",
     "batch_size = 32\n"
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -185,7 +185,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 73633 unique tokens.\n",
       "Found 73633 unique tokens.\n"
      ]
     }
@@ -211,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -234,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -248,16 +247,7 @@
       "Preparing embedding matrix.\n",
       "Shape of train: (94249, 200) (94249, 11)\n",
       "Shape of validate: (23562, 200) (23562, 11)\n",
-      "Shape of test: (69356, 200)\n",
-      "[[ 0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.]]\n",
-      "89984    10\n",
-      "17375     9\n",
-      "84588     3\n",
-      "42578    10\n",
-      "Name: quality, dtype: int64\n"
+      "Shape of test: (69356, 200)\n"
      ]
     }
    ],
@@ -273,7 +263,7 @@
     "indices = np.arange(train_data.shape[0])\n",
     "np.random.shuffle(indices)\n",
     "train_data = train_data[indices]\n",
-    "labels = labels[indices]\n",
+    "_labels = _labels[indices]\n",
     "nb_validation_samples = int(VALIDATION_SPLIT * train_data.shape[0])\n",
     "\n",
     "# nb_validation_samples = 20000\n",
@@ -293,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -302,7 +292,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20000\n"
+      "23562\n"
      ]
     }
    ],
@@ -312,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -321,7 +311,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(20001, 100)\n"
+      "(73634, 100)\n"
      ]
     }
    ],
@@ -356,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -366,10 +356,35 @@
      "output_type": "stream",
      "text": [
       "Build model...\n",
-      "Train...\n",
+      "Train...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/tensorflow/python/ops/gradients.py:90: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
+      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Train on 94249 samples, validate on 23562 samples\n",
-      "Epoch 1/2\n",
-      " 8608/94249 [=>............................] - ETA: 850s - loss: 0.2985 - acc: 0.9091"
+      "Epoch 1/5\n",
+      "94249/94249 [==============================] - 2180s - loss: 0.2672 - acc: 0.9091 - val_loss: 0.2510 - val_acc: 0.9091\n",
+      "Epoch 2/5\n",
+      "94249/94249 [==============================] - 2325s - loss: 0.2432 - acc: 0.9125 - val_loss: 0.2327 - val_acc: 0.9159\n",
+      "Epoch 3/5\n",
+      "94249/94249 [==============================] - 2379s - loss: 0.2322 - acc: 0.9154 - val_loss: 0.2255 - val_acc: 0.9159\n",
+      "Epoch 4/5\n",
+      "94249/94249 [==============================] - 2377s - loss: 0.2264 - acc: 0.9163 - val_loss: 0.2216 - val_acc: 0.9167\n",
+      "Epoch 5/5\n",
+      "94249/94249 [==============================] - 2460s - loss: 0.2219 - acc: 0.9175 - val_loss: 0.2193 - val_acc: 0.9170\n",
+      "23562/23562 [==============================] - 165s   \n",
+      "Test score: 0.219270950718\n",
+      "Test accuracy: 0.916988835651\n"
      ]
     }
    ],
@@ -378,13 +393,13 @@
     "                            EMBEDDING_DIM,\n",
     "                            weights=[embedding_matrix],\n",
     "                            input_length=MAX_SEQUENCE_LENGTH,\n",
-    "                            trainable=False,\n",
+    "#                             trainable=False,\n",
     "                            dropout=0.2)\n",
     "batch_size = 32\n",
     "\n",
     "print('Build model...')\n",
     "# sequence_input = Input(shape=(MAX_SEQUENCE_LENGTH,), dtype='int32')\n",
-    "# embedded_sequences = embedding_layer()\n",
+    "# embedded_sequences = embedding_layer(sequence_input)\n",
     "model = Sequential()\n",
     "model.add(embedding_layer)\n",
     "model.add(LSTM(100, dropout_W=0.2, dropout_U=0.2))  # try using a GRU instead, for fun\n",
@@ -398,7 +413,7 @@
     "              metrics=['accuracy'])\n",
     "\n",
     "print('Train...')\n",
-    "model.fit(x_train, y_train, batch_size=batch_size, nb_epoch=2,\n",
+    "model.fit(x_train, y_train, batch_size=batch_size, nb_epoch=5,\n",
     "          validation_data=(x_val, y_val))\n",
     "score, acc = model.evaluate(x_val, y_val,\n",
     "                            batch_size=batch_size)\n",
@@ -408,19 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "predict = model.predict_classes(x_test, batch_size=32, verbose=1)\n",
-    "print(predict.shape)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -429,13 +432,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10 10 10 ..., 10 10 10]\n",
-      "[[ 0.  0.  0. ...,  0.  0.  0.]\n",
-      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      "69356/69356 [==============================] - 485s   \n",
+      "(69356,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "predict = model.predict_classes(x_test, batch_size=32, verbose=1)\n",
+    "print(predict.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 2 10 10 ..., 10  2  2]\n",
+      "[[ 0.  0.  0. ...,  0.  0.  1.]\n",
       " [ 0.  0.  0. ...,  0.  0.  1.]\n",
+      " [ 0.  0.  1. ...,  0.  0.  0.]\n",
       " ..., \n",
       " [ 0.  0.  1. ...,  0.  0.  0.]\n",
-      " [ 0.  0.  0. ...,  0.  1.  0.]\n",
+      " [ 0.  0.  0. ...,  1.  0.  0.]\n",
       " [ 0.  0.  0. ...,  0.  0.  1.]]\n"
      ]
     }
@@ -447,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -456,7 +480,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20000/20000 [==============================] - 81s    \n"
+      "23562/23562 [==============================] - 162s   \n"
      ]
     }
    ],
@@ -466,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -475,17 +499,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10 10 10 10 10 10 10 10 10 10]\n"
+      "[10 10  2 10 10  2  2 10 10 10]\n",
+      "11\n"
      ]
     }
    ],
    "source": [
-    "print(re[:10])"
+    "print(re[:10])\n",
+    "print(len(y_val[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -496,6 +522,15 @@
     "submit['quality'] = predict\n",
     "submit.to_csv('submission.csv',index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
